fixed mobile search related bugs by making the search the same as web but smaller (so it is always open, the issues were related to the collapsing)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1300,10 +1300,9 @@ ul#popupNav li:hover{
       left: -14% !important;
     }
     #searchInput{
-      visibility: hidden;
-    }
-    .searchInputOpen{
       visibility: visible !important;
+      width: 50px;
+      /* visibility: hidden; */
     }
     #searchResults{
     max-height: 200px;
